package com.lukire.Map;

public class MapGeneration {
}