package com.lukire.effect;

public abstract class Effect {
}
