package com.lukire.effect.effects;

public class Explosion {
}
