package com.lukire.entity.entities;

import com.lukire.entity.Entity;

public abstract class Projectile extends Entity {
}
