package com.lukire.event;

public interface Listener {
}
