package com.lukire.map.tile.tiles;

import com.lukire.map.tile.Tile;
import com.lukire.map.tile.TileType;

public class AirTile extends Tile {

    public AirTile() {
        super(TileType.AIR);
    }
}
