package com.lukire.map.tile.tiles;

import com.lukire.map.tile.Tile;
import com.lukire.map.tile.TileType;

public class StoneTile extends Tile {
    public StoneTile(int x, int y) {
        super(TileType.STONE, x, y);
    }
}
